merubah cover menjadi index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <a class="navbar-brand" href="#"><img src="./assets/mager.png" style="width: 50px;" class="rounded-circle"> Mager</a>
         <div class="navbar-nav ml-auto">
-            <a href="#" class="nav-link active">Home</a>
+            <a href="./index.html" class="nav-link active">Home</a>
             <a href="./resume.html" class="nav-link">About Me</a>
         </div>
     </div>
@@ -40,7 +40,7 @@
                     Selamat Datang Di Website Ini, Nama saya Fedi Fandawa, saya adalah seorang Mahasiswa yang kuliah di Universitas Bumi Gora Mataram
                 </p>
                 <p class="banner-btn">
-                    <a href="#" class="active">Home</a>
+                    <a href="./index.html" class="active">Home</a>
                     <a href="./resume.html">About Me</a>
                 </p>
             </div>
