--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@
         <div class="container">
             <a class="navbar-brand" href="#"><img src="./assets/mager.png" style="width: 50px;" class="rounded-circle"> Mager</a>
             <div class="navbar-nav ml-auto">
-                <a href="./cover.html" class="nav-link">Home</a>
-                <a href="#" class="nav-link active">About Me</a>
+                <a href="./index.html" class="nav-link">Home</a>
+                <a href="./resume.html" class="nav-link active">About Me</a>
             </div>
         </div>
     </nav>
