--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                         <h3 class="text-center">Social</h3>
                         <div class="card-body">
                             <h5><i class="fab fa-facebook-square mr-2"></i> Fedi Fandawa</h5>
-                            <h5><i class="fab fa-github-square mr-2"></i> https://fedot99.github.io/resume/</h5>
+                            <h5><i class="fab fa-github-square mr-2"></i> https://fedot99.github.io/resume</h5>
                             <h5><i class="fab fa-instagram-square mr-2"></i> @fedifandawa</h5>
                             <h5><i class="fab fa-twitter-square mr-2"></i> fedifandawa</h5>
                         </div>
